@@ -5,10 +5,10 @@
 }
 
 \description{
-  The new \code{animate}-method for \code{\linkS4class{sts}} objects
+  The \code{animate}-method for \code{\linkS4class{sts}} objects
   supersedes the \code{\link{stsplot}} type \code{observed~1|unit*time}
   implemented by the function \code{\link{stsplot_spacetime}}.
-  Maps generated by the new function \code{\link{stsplot_space}} are
+  Maps generated by \code{\link{stsplot_space}} are
   sequentially plotted along time (optionally showing cumulative
   counts), with an optional time series chart below the map to track the
   epidemic curve.
@@ -20,7 +20,8 @@
 }
 
 \usage{
-\method{animate}{sts}(object, tps = NULL, cumulative = FALSE, at = 10, ...,
+\method{animate}{sts}(object, tps = NULL, cumulative = FALSE,
+        population = NULL, at = 10, ...,
         timeplot = list(height = 0.3), sleep = 0.5, verbose = interactive())
 }
 
@@ -39,8 +40,8 @@
   \item{cumulative}{
     logical specifying if the cumulative counts over time should be plotted.
   }
-  \item{at,\dots}{
-    arguments for \code{stsplot_space}.
+  \item{population,at,\dots}{
+    arguments for \code{\link{stsplot_space}}.
   }
   \item{timeplot}{
     if a list (of arguments for the internal function
